# bretagnizer

./: Dockerfile  LICENSE  README.md  pyproject.toml  run_bretagnizer.py
notebooks/: multilayer_percep.ipynb
src/: bretagnize.py  constants.py  multilayer_perceptron.py  utils.py
