[tool.poetry]
name = "bretagnizer"
version = "0.1.0"
description = ""
authors = ["Em-floch"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
torch = "^2.1.1"
numpy = "^1.26.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
